[package]

name = "mime"
version = "0.1.3"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT"
description = "Strongly Typed Mimes"
documentation = "http://hyperium.github.io/mime.rs"
repository = "https://github.com/hyperium/mime.rs"
keywords = ["mime", "media-extensions", "media-types"]

[dependencies]
log = "0.3"
serde = { git = "https://github.com/serde-rs/serde", rev = "46f88037db239ac87c65081523941db104f56aab" }

[dev_dependencies]
serde_json = "0.6"

[dependencies.heapsize]
version = ">=0.2.0, <0.4"
optional = true

[dependencies.heapsize_plugin]
version = "0.1.2"
optional = true

[features]
heap_size = ["heapsize", "heapsize_plugin"]
nightly = []
